--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   day_night_time_picker: ^1.0.3+1
   carousel_slider: ^4.1.1
   extended_image: ^6.3.2
+  flutter_spinkit: ^5.1.0
 
 dev_dependencies:
   flutter_test:
