--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,11 @@ dependencies:
   carousel_slider: ^4.1.1
   extended_image: ^6.3.2
   flutter_spinkit: ^5.1.0
+  firebase_core: ^2.3.0
+  firebase_messaging: ^14.1.2
+  flutter_local_notifications: ^12.0.4
+  cloud_firestore: ^4.1.0
+  onesignal_flutter: ^3.4.2
 
 dev_dependencies:
   flutter_test:
