--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,12 @@ dependencies:
   flutter_local_notifications: ^12.0.4
   cloud_firestore: ^4.1.0
   onesignal_flutter: ^3.4.2
+  flutter_bounce: ^1.1.0
+  syncfusion_flutter_calendar: ^20.4.44
+  roundcheckbox: ^2.0.5
+  multi_image_picker_view: ^0.0.13
+  file_picker: ^5.2.5
+  flutter_reorderable_grid_view: ^3.1.3
 
 dev_dependencies:
   flutter_test:
@@ -70,7 +76,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
+  assets:
+    - assets/background_phone_logo.png
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
