--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   multi_image_picker_view: ^0.0.13
   file_picker: ^5.2.5
   flutter_reorderable_grid_view: ^3.1.3
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
