--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,10 +51,13 @@ dependencies:
   flutter_bounce: ^1.1.0
   syncfusion_flutter_calendar: ^20.4.44
   roundcheckbox: ^2.0.5
-  multi_image_picker_view: ^0.0.13
+  multi_image_picker_view: ^0.0.14
   file_picker: ^5.2.5
   flutter_reorderable_grid_view: ^3.1.3
   http: ^0.13.5
+  dio: ^5.0.0
+  path_provider: ^2.0.12
+  images_picker: ^1.2.11
 
 dev_dependencies:
   flutter_test:
