--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_advanced_drawer: ^1.3.2
   flutter_holo_date_picker: ^1.1.0
+  loading_animation_widget: ^1.2.0+4
   dropdown_formfield: ^0.1.3
   day_night_time_picker: ^1.0.3+1
   carousel_slider: ^4.1.1
