--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   dio: ^5.0.0
   path_provider: ^2.0.12
   images_picker: ^1.2.11
+  material_dialogs: ^1.1.4
 
 dev_dependencies:
   flutter_test:
